implementación de listado de productos (v 1)